--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cuid": "^2.1.4",
@@ -17,7 +17,8 @@
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "querystring": "^0.2.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "spotify-web-api-node": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
