--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "spotify-web-api-node": "^4.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^4.15.0",
     "eslint-config-prettier": "^2.9.0",
@@ -32,8 +33,6 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "nodemon": "^1.18.3",
-    "prettier": "^1.15.2",
-    "rimraf": "^2.6.2",
-    "supertest": "^3.3.0"
+    "prettier": "^1.15.2"
   }
 }
