--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cuid": "^2.1.4",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.6",
     "morgan": "^1.9.1",
     "querystring": "^0.2.0",
     "request": "^2.88.2",
@@ -32,7 +35,7 @@
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "nodemon": "^1.18.3",
+    "nodemon": "^2.0.6",
     "prettier": "^1.15.2"
   }
 }
